[project]
name = "huledu-monorepo"
version = "0.2.0"
description = "HuleEdu Monorepo - Reboot to Microservices"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

# Minimal root dependencies - most deps are per-service or in common_core
dependencies = [
    "python-dotenv",
    "pypandoc",
    "aiohttp",
    "crossfiledialog",
    "pytest-timeout",
    "pydantic",
    "pydantic-settings",
    "PyJWT",  # For test authentication
    "psutil",
    "pyarrow",
    "fastparquet",
    "weasyprint",
    "typer",
    "click",
    "textual",
    "textual-filedrop",
    "numpy",
    "scipy",
    "google-genai>=1.49.0",
]

[dependency-groups]
# Tools for overall monorepo management - let PDM resolve latest compatible versions
monorepo-tools = [
    "ruff",
    "mypy",
    "pyinstaller",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "httpx",
    "pre-commit",
    "testcontainers[postgres,kafka,redis]",
    "kafka-python",
    "respx",
    "freezegun",
    "types-psutil",
    "reportlab",
    "types-reportlab",
    "aiosmtplib>=4.0.1",
    "jsonschema",
    "pyyaml",  # YAML parsing for validation scripts
    # Verification and analysis tools
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "tabulate",
    "pandas-stubs",  # Type stubs
    "types-tabulate",  # Type stubs
    # Bayesian modeling dependencies
    "pymc",
    "arviz",
    "scikit-learn",
]

# Install all services and common_core for unified development
dev = [
    "coverage>=7.9.2",
    "redis>=6.2.0",
    "aioresponses>=0.7.8",
    "radon>=6.0.1",
    # Editable local packages (libs and services)
    "-e file:///${PROJECT_ROOT}/libs/common_core",
    "-e file:///${PROJECT_ROOT}/libs/huleedu_service_libs",
    "-e file:///${PROJECT_ROOT}/libs/huleedu_nlp_shared",
    "-e file:///${PROJECT_ROOT}/services/content_service",
    "-e file:///${PROJECT_ROOT}/services/spellchecker_service",
    "-e file:///${PROJECT_ROOT}/services/batch_orchestrator_service",
    "-e file:///${PROJECT_ROOT}/services/essay_lifecycle_service",
    "-e file:///${PROJECT_ROOT}/services/file_service",
    "-e file:///${PROJECT_ROOT}/services/cj_assessment_service",
    "-e file:///${PROJECT_ROOT}/services/class_management_service",
    "-e file:///${PROJECT_ROOT}/services/api_gateway_service",
    "-e file:///${PROJECT_ROOT}/services/result_aggregator_service",
    "-e file:///${PROJECT_ROOT}/services/llm_provider_service",
    "-e file:///${PROJECT_ROOT}/services/websocket_service",
    "-e file:///${PROJECT_ROOT}/services/nlp_service",
    "-e file:///${PROJECT_ROOT}/services/identity_service",
    "-e file:///${PROJECT_ROOT}/services/email_service",
    "-e file:///${PROJECT_ROOT}/services/entitlements_service",
    "-e file:///${PROJECT_ROOT}/services/language_tool_service",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".pdm-python",
    ".pdm-build",
    "common_core/.venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
]

[tool.ruff.format]
  quote-style = "double"
  indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# ==============================================================================
# SERVICE ENTRY POINTS - Imports after environment setup
# ==============================================================================
"services/*/app.py" = ["E402"]          # Imports after load_dotenv()
"services/*/worker.py" = ["E402"]       # Imports after load_dotenv()
"services/*/alembic/env.py" = ["E402"]  # Imports after sys.path modification

# ==============================================================================
# CORE LIBRARIES - Intentional unused imports for re-export
# ==============================================================================
"libs/common_core/src/common_core/__init__.py" = ["F401"]  # Union import for Pydantic model rebuilding

# ==============================================================================
# CODE GENERATION & TEMPLATES - Long single-line requirements
# ==============================================================================
"scripts/update_service_dockerfiles.py" = ["E501"]  # Docker COPY commands must be single lines

# ==============================================================================
# VERIFICATION SCRIPTS - Long template strings and formatted output
# ==============================================================================
"scripts/cj_verification/*.py" = ["E501"]  # Report generation with markdown templates

# ==============================================================================
# ML INVESTIGATION SCRIPTS - Exploratory code patterns
# ==============================================================================
"scripts/ml/*.py" = ["E402", "E722"]  # Imports after runtime checks, bare excepts for exploration

# ==============================================================================
# RESEARCH CODE - Relaxed rules for exploratory/one-time analysis
# ==============================================================================
"docs/research/**/*.py" = ["E501", "E722", "F401"]  # Long lines, bare excepts, unused imports

# Note: Import restrictions would be enforced through custom linting rules
# For now, rely on type system and code review to prevent standard library logging

[tool.mypy]
mypy_path = "stubs"
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
exclude = [
    "libs/common_core/src/",
    "libs/huleedu_service_libs/",
    "cj_essay_assessment/",
    "scripts/",
    "services/batch_orchestrator_service/implementations/circuit_breaker_example.py",
]

# Per-module settings for new microservices (stricter)
[[tool.mypy.overrides]]
module = [
    "services.content_service.*",
    "services.spellchecker_service.*",
    "services.batch_orchestrator_service.*",
    "services.essay_lifecycle_service.*",
    "services.file_service.*",
    "services.cj_assessment_service.*",
    "services.class_management_service.*",
    "services.result_aggregator_service.*",
    "services.llm_provider_service.*",
    "services.websocket_service.*",
    "services.nlp_service.*",
    "services.identity_service.*",
    "services.email_service.*",
    "services.entitlements_service.*",
    "services.language_tool_service.*",
]
ignore_missing_imports = false
disallow_untyped_defs = true

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aiofiles.*",
    "dishka.*",
    "quart_dishka.*",
    "httpx.*",
    "spell_logic.*",
    "diskcache.*",
    "choix.*",
    "tenacity.*",
    "sqlalchemy.*",
    "asyncpg.*",
    "testcontainers.*",
    "kafka.*", # For kafka-python library
    "redis.*",  # Redis client library
    "enums_db",       # Database enum module without type stubs
    "models_db",      # Database models module without type stubs
    "yaml.*",       # PyYAML stubs
    "pypandoc.*",   # pypandoc lacks type stubs
    "magic.*",      # python-magic lacks type stubs
    "spacy.*",      # spaCy NLP framework
    "langdetect.*", # Language detection library
    "wordfreq.*",   # Word frequency library
    "lexical_diversity.*", # Lexical diversity metrics
    "gensim.*",     # Topic modeling and NLP library
    "textdescriptives.*", # Text complexity metrics
    "fastapi.*",
    "starlette.*",
    "rich.*",       # Rich library for terminal formatting
    "opentelemetry.*",  # OpenTelemetry instrumentation libraries
    "scipy.*",      # SciPy lacks complete type stubs
    "sklearn.*",    # scikit-learn lacks type stubs
    "networkx.*",   # NetworkX graph library lacks type stubs
]
ignore_missing_imports = true

# Service-local config modules and API modules
[[tool.mypy.overrides]]
module = [
    "config", 
    "worker_main", 
    "core_logic", 
    "core_logic.*",
    "event_router", 
    "event_processor",
    "protocols", 
    "di", 
    "state_store", 
    "batch_command_handlers",
    "batch_tracker",
    "implementations.*",
    "protocol_implementations.*",
    "api.*",
    "api_models",
    "models_api",
    "kafka_consumer",
    "metrics",
    "startup_setup",
    "text_processing",
    "hypercorn_config",
    "pair_generation",
    "scoring_ranking",
    "core_assessment_logic",
    "transitions.*",  # State machine library without type stubs
    "essay_state_machine",  # Local module without py.typed marker
    "services.batch_orchestrator_service.implementations.circuit_breaker_example",  # Example file with complex circuit breaker typing
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."] 
omit = [
    "*test*",
    "*__pycache__*",
    "*venv*",
    "*.venv*",
    "*migrations*",
    "*setup.py",
    "*__init__.py",
    "*__dishka_*",
    "*dist-packages*",
    "*site-packages*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise ImportError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "@property",
    "@classmethod",
    "@staticmethod",
    "def __new__",
    "def __init__",
    "def __call__",
    "raise NotImplemented",
    "@pytest.fixture",
    "@pytest.mark",
    "@pytest.skip",
    "@pytest.mark.skip",
    "@pytest.mark.skipif",
]

[tool.pytest.ini_options]
# Note: Update testpaths when adding new services or libs
testpaths = [
    "tests",
    "libs/common_core/tests",
    "libs/huleedu_service_libs/tests",
    "services/content_service/tests",
    "services/spellchecker_service/tests",
    "services/batch_orchestrator_service/tests",
    "services/essay_lifecycle_service/tests",
    "services/file_service/tests",
    "services/cj_assessment_service/tests",
    "services/class_management_service/tests",
    "services/result_aggregator_service/tests",
    "services/llm_provider_service/tests",
    "services/websocket_service/tests",
    "services/nlp_service/tests",
    "services/identity_service/tests",
    "services/email_service/tests",
    "services/entitlements_service/tests",
    "services/language_tool_service/tests"
]
pythonpath = [
    "."
]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-s -v --durations=10 --log-cli-level=INFO --import-mode=importlib -m 'not (financial or slow or docker)'"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(message)s"
log_file_format = "%(message)s"
asyncio_mode = "auto"

markers = [
    "financial: marks tests that incur real monetary costs via external API calls",
    "slow: marks tests as slow running",
    "performance: marks tests that perform load testing or performance benchmarking",
    "integration: marks tests requiring external services like Kafka",
    "docker: marks tests that need docker-compose setup",
    "kafka: marks tests requiring a Kafka instance",
    "e2e: marks tests as end-to-end pipeline tests",
    "functional: marks functional tests that verify cross-service behavior",
    "timeout: marks tests with specific timeout requirements",
    "no_prometheus_clear: marks tests that should not have their Prometheus registry cleared",
    "unit: marks tests as unit tests for isolated component testing",
]

filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:pkg_resources",
    # Suppress spacy's internal click parser deprecation (library issue, not our code)
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning:spacy.cli._util",
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning:weasel.util.config",
    # Suppress lexical_diversity's internal pkg_resources usage (library issue, not our code)
    "ignore:pkg_resources is deprecated as an API:UserWarning:lexical_diversity.lex_div",
    # Suppress testcontainers internal decorator deprecation (library issue, not our code)
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.*",
    # Suppress testcontainers wait_for_logs deprecation (library issue, not our code)
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning:testcontainers.kafka.*",
]


[tool.pdm]
distribution = false

[tool.pdm.scripts]
# Database Verification (Monorepo-wide)
db-verify-outbox-all = "python scripts/verify_outbox_all_services.py"  # Verify outbox indexes across all services

# Code Quality & Testing (Monorepo-wide)
format-all = "ruff format --force-exclude ."
lint-all = "ruff check --force-exclude ."
lint-fix = "ruff check --fix --force-exclude ."
typecheck-all = "mypy --config-file pyproject.toml --follow-imports=silent services tests"
typecheck-libs = {shell = "cd libs && mypy -p common_core -p huleedu_service_libs --show-error-codes"}
typecheck-common-core = {shell = "cd libs && mypy -p common_core --show-error-codes"}
typecheck-service-libs = {shell = "cd libs && mypy -p huleedu_service_libs --show-error-codes"}
typecheck-path = { shell = "mypy --config-file pyproject.toml --follow-imports=silent \"$@\"" }
validate-config = "python scripts/validate_service_config.py"  # Validate service configurations against docker-compose
validate-config-strict = "python scripts/validate_service_config.py --strict"  # Validate with warnings as errors
validate-enum-drift = "python scripts/validate_enum_drift.py"  # Ensure Python enums exist in DB enums
test-all = "pytest"
test-parallel = "pytest -n auto"
test-sequential = "pytest -n 0"
test-financial = "pytest -m 'financial or docker or e2e' -v --tb=short"
test-providers = "pytest services/*/tests/integration/ -m 'financial or slow or docker' -v"
pytest-root = "scripts/pytest-root.sh"

# Development Environment Commands (hot-reload enabled, debug mode)
dev = "scripts/dev.sh"  # Main dev script - type 'pdm run dev help' for all commands
dev-build = {shell = "scripts/dev.sh build $@"}  # Build for development with cache
dev-build-clean = {shell = "scripts/dev.sh build-clean $@"}  # Clean build for development
dev-build-deps-clean = {shell = "scripts/dev.sh build-deps-clean"}  # Build only shared deps image with --no-cache
dev-start = {shell = "scripts/dev.sh start-nobuild $@"}  # Start development environment (no rebuild, fast)
dev-build-start = {shell = "scripts/dev.sh start $@"}  # Build with cache then start development environment
dev-stop = {shell = "scripts/dev.sh stop $@"}  # Stop development containers
dev-restart = {shell = "scripts/dev.sh restart $@"}  # Restart development containers (does NOT pick up env var changes)
dev-recreate = {shell = "scripts/dev.sh recreate $@"}  # Force recreate SERVICE containers only (preserves databases)
dev-db-recreate = {shell = "scripts/dev.sh recreate-db $@"}  # Force recreate DATABASE containers (⚠️ RESETS DATA)
dev-logs = {shell = "scripts/dev.sh logs $@"}  # Follow development logs
dev-ps = {shell = "scripts/dev.sh ps $@"}  # Show development container status
dev-check = "scripts/dev.sh check"  # Check what needs rebuilding

# Production Environment Commands (optimized, no debug)
prod = "scripts/prod.sh"  # Main prod script - type 'pdm run prod help' for all commands
prod-build = {shell = "scripts/prod.sh build $@"}  # Build for production with cache
prod-build-clean = {shell = "scripts/prod.sh build-clean $@"}  # Clean build for production
prod-start = {shell = "scripts/prod.sh start $@"}  # Start production containers
prod-stop = {shell = "scripts/prod.sh stop $@"}  # Stop production containers
prod-restart = {shell = "scripts/prod.sh restart $@"}  # Restart production containers
prod-logs = {shell = "scripts/prod.sh logs $@"}  # Follow production logs
prod-health = "scripts/prod.sh health"  # Check production service health
prod-deploy = {shell = "scripts/prod.sh deploy $@"}  # Full production deployment
# Database Management
db-reset = "scripts/reset-dev-databases.sh"  # Reset development databases
db-seed = "scripts/seed-dev-data.sh"  # Seed development data

# Production Deployment
prod-validate = "scripts/validate-production-config.sh"  # Validate production config
prod-migrate = "scripts/migrate-production.sh"  # Run production migrations

# Utilities
build-common-core = "pdm build -p libs/common_core"  # Build shared library
build-standalone = {shell = "scripts/build_standalone.sh"}  # Build standalone executables
kafka-setup = "python scripts/kafka_topic_bootstrap.py"  # Initialize Kafka topics
docker-clean = "docker system prune -af"  # Clean Docker resources (use with caution)
codex = "scripts/codex-exec"  # Start codex with full system access and high reasoning

# Task Management
new-task = {cmd = ["python", "-m", "scripts.task_mgmt.new_task"]}  # Create new task with frontmatter
validate-tasks = "python -m scripts.task_mgmt.validate_front_matter --verbose"  # Validate task frontmatter
tasks = {cmd = ["python", "-m", "scripts.task_mgmt.filter_tasks"]}  # Filter and query tasks by frontmatter
tasks-now = "python -m scripts.task_mgmt.filter_tasks --priority high --status in_progress"  # High priority tasks in progress
tasks-next = "python -m scripts.task_mgmt.filter_tasks --priority high --priority medium --status research --sort priority"  # Research tasks ready to start (high priority first)

# Documentation & Rules Management
new-doc = {cmd = ["python", "-m", "scripts.docs_mgmt.new_doc"]}  # Create new doc (runbook, adr, epic)
new-rule = {cmd = ["python", "-m", "scripts.claude_mgmt.new_rule"]}  # Create new rule file

# Observability Stack Management
obs-up = "docker compose up -d prometheus grafana loki jaeger promtail alertmanager"
obs-down = "docker compose stop prometheus grafana loki jaeger promtail alertmanager"
obs-restart = "docker compose restart prometheus grafana loki jaeger promtail alertmanager"
obs-logs = "docker compose logs -f prometheus grafana loki jaeger promtail alertmanager"
obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertmanager"

eng5-np-run = "python -m scripts.cj_experiments_runners.eng5_np.cli"
eng5-runner = {shell = "scripts/run_eng5_np_runner.sh $@"}  # Run ENG5 NP runner in container with infrastructure orchestration
cj-admin = "python -m services.cj_assessment_service.cli_admin"
llm-check-models = "python -m services.llm_provider_service.cli_check_models"
llm-admin = "python -m services.llm_provider_service.admin_cli"
prompt-cache-benchmark = "python -m scripts.prompt_cache_benchmark.cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
