[project]
name = "huleedu-api-gateway-service"
version = "1.0.0"
description = "HuleEdu API Gateway Service - Client-facing API for React frontend"
authors = [
    { name = "HuleEdu Team", email = "dev@huleedu.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "dishka",
    "dishka[fastapi]",
    "pydantic",
    "pydantic-settings",
    "huleedu-common-core",
    "huleedu-service-libs",
    "prometheus-client",
    "python-multipart",
    "slowapi",  # Rate limiting
    "python-jose[cryptography]", # For JWT
    "PyJWT",    # JWT token handling
    "httpx",    # HTTP client for service communication
    "passlib[bcrypt]"           # For password hashing (future)
]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "respx",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "uvicorn services.api_gateway_service.app.main:app --host 0.0.0.0 --port 8080"
dev = "uvicorn services.api_gateway_service.app.main:app --host 0.0.0.0 --port 8080 --reload"
test = "pytest services/api_gateway_service/tests/ -v"
lint = "ruff check services/api_gateway_service/ --fix"
format = "ruff format services/api_gateway_service/"
typecheck = "mypy services/api_gateway_service/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "Q"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["services", "common_core", "huleedu_service_libs"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["uvicorn.*", "slowapi.*", "respx.*"]
ignore_missing_imports = true

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/common_core"
huleedu-service-libs = "file:///app/services/libs" 