[project]
name = "huleedu-batch-conductor-service"
version = "1.0.0"
description = "HuleEdu Batch Conductor Service - Internal pipeline dependency resolution"
authors = [
    { name = "HuleEdu Team", email = "dev@huleedu.com" }
]
dependencies = [
    "quart>=0.19.4",
    "hypercorn>=0.16.0",
    "dishka>=1.3.0",
    "quart-dishka>=1.3.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "huleedu-common-core",
    "prometheus-client>=0.19.0",
]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "hypercorn services.batch_conductor_service.app:app --bind 0.0.0.0:4002 --worker-class asyncio"
dev = "hypercorn services.batch_conductor_service.app:app --bind 0.0.0.0:4002 --worker-class asyncio --reload"
test = "pytest services/batch_conductor_service/tests/ -v"
lint = "ruff check services/batch_conductor_service/ --fix"
format = "ruff format services/batch_conductor_service/"
typecheck = "mypy services/batch_conductor_service/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "Q"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["services", "common_core", "huleedu_service_libs"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["hypercorn.*", "respx.*"]
ignore_missing_imports = true 