[project]
name = "huleedu-batch-conductor-service"
version = "1.0.0"
description = "HuleEdu Batch Conductor Service - Internal pipeline dependency resolution"
authors = [
    { name = "HuleEdu Team", email = "dev@huleedu.com" }
]
dependencies = [
    "quart",
    "hypercorn",
    "dishka",
    "quart-dishka",
    "aiohttp",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "huleedu-common-core",
    "huleedu-service-libs",
    "prometheus-client",
    "tenacity",
    "sqlalchemy",
    "asyncpg",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "respx",
]

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "hypercorn services.batch_conductor_service.app:app --bind 0.0.0.0:4002 --worker-class asyncio"
dev = "hypercorn services.batch_conductor_service.app:app --bind 0.0.0.0:4002 --worker-class asyncio --reload"
test = "pytest services/batch_conductor_service/tests/ -v"
lint = "ruff check services/batch_conductor_service/ --fix"
format = "ruff format services/batch_conductor_service/"
typecheck = "mypy services/batch_conductor_service/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "Q"]

[tool.ruff.lint.isort]
known-first-party = ["services", "common_core", "huleedu_service_libs"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["hypercorn.*", "respx.*"]
ignore_missing_imports = true 