[project]
name = "huleedu-batch-service"
version = "0.2.0"
description = "HuleEdu Batch Orchestration Service (MVP)"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "hypercorn",
    "python-dotenv",    
    "aiokafka", 
    "aiohttp",
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
    "prometheus-client",
    "dishka",
    "quart-dishka",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/common_core"
huleedu-service-libs = "file:///app/services/libs"

[tool.pdm.scripts]
start = "hypercorn app:app --config python:hypercorn_config"
dev = "quart --app app:app --debug run -p 5001"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false 

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "dishka.*",
]
ignore_missing_imports = true

# Service-local modules
[[tool.mypy.overrides]]
module = [
    "di",
    "protocols",
    "config",
]
ignore_missing_imports = true 