[project]
name = "huleedu-batch-service"
version = "0.2.0"
description = "HuleEdu Batch Orchestration Service (MVP)"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "hypercorn",
    "python-dotenv",    
    "aiokafka", 
    "aiohttp",
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
    "prometheus-client",
    "dishka",
    "quart-dishka",
    "transitions",
    # Database dependencies for production repository
    "SQLAlchemy[asyncio]",
    "asyncpg",  # PostgreSQL async driver
    "alembic",  # Database migration tool
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[tool.pdm.scripts]
start = "python app.py"
dev = "quart --app app:app --debug run -p 5001"

# Alembic database migration commands
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"
migrate-history = "alembic history"
migrate-current = "alembic current"
migrate-revision = "alembic revision --autogenerate"
migrate-stamp = "alembic stamp head"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false 

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "dishka.*",
]

# Service-local modules
[[tool.mypy.overrides]]
module = [

]