[project]
name = "huleedu-batch-service"
version = "0.1.0"
description = "HuleEdu Batch Orchestration Service (MVP)"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "quart>=0.19.4",
    "hypercorn>=0.16.0",
    "python-dotenv>=1.0.0",
    "aiokafka>=0.10.0", 
    "aiohttp>=3.9.0",
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/common_core"
huleedu-service-libs = "file:///app/services/libs"

[tool.pdm.scripts]
start = "hypercorn app:app --config python:hypercorn_config"
dev = "quart --app app:app --debug run -p 5001"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false 