[project]
name = "huleedu-cj-assessment-service"
version = "0.1.0"
description = "HuleEdu Comparative Judgment Assessment Service"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "aiokafka",
    "aiohttp",
    "python-dotenv",
    # For common_core as a local path dependency:
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
    "prometheus-client",
    "dishka",
    # Web framework dependencies
    "quart",
    "quart-dishka",
    "hypercorn",
    # Database dependencies
    "SQLAlchemy[asyncio]",
    "aiosqlite",  # For unit tests with in-memory DB
    "asyncpg",    # For PostgreSQL in production/E2E tests
    "alembic",    # Database migrations
    # CJ-specific dependencies
    "cachetools",
    "diskcache",
    "choix",  # Bradley-Terry scoring
    "numpy",
    "tenacity",  # Retry logic
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

# Package configuration for proper imports
[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
]

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/libs/common_core"
huleedu-service-libs = "file:///app/libs/huleedu_service_libs"

[tool.pdm.scripts]
start = "python app.py"

# Alembic database migration commands
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"
migrate-revision = "alembic revision --autogenerate"
migrate-history = "alembic history"
migrate-current = "alembic current"
migrate-stamp = "alembic stamp head"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false
check_untyped_defs = true

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "dishka.*",
    "choix.*",
]
ignore_missing_imports = true

# Service-local modules
[[tool.mypy.overrides]]
module = [
    "di",
    "protocols",
    "config",
]
ignore_missing_imports = true 