[project]
name = "huleedu-content-service"
version = "0.2.0"
description = "HuleEdu Content Storage Service (MVP)"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "quart",
    "aiofiles",
    "hypercorn",
    "python-dotenv",
    "huleedu-common-core",
    "huleedu-service-libs",
    "pydantic",
    "pydantic-settings",
    "prometheus-client",
    "dishka",
]



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
huleedu-common-core = "file:///app/common_core"
huleedu-service-libs = "file:///app/services/libs"

[tool.pdm.scripts]
start = "hypercorn app:app --bind 0.0.0.0:8000"
dev = "quart --app app:app --debug run -p 8001" # Changed port for dev to match compose

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false 